<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ImageView
        android:id="@+id/ivSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_slogan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:drawablePadding="@dimen/size_6dp"
        android:padding="@dimen/size_8dp"
        android:gravity="center_vertical"
        android:maxLength="@integer/username_max_length"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:drawableRight="@drawable/btn_clear_selector"
        android:hint="@string/hint_account"
        app:layout_constraintTop_toBottomOf="@+id/ivSlogan"/>
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:drawablePadding="@dimen/size_6dp"
        android:padding="@dimen/size_8dp"
        android:gravity="center_vertical"
        android:maxLength="@integer/username_max_length"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:drawableRight="@drawable/btn_clear_selector"
        android:hint="@string/hint_username"
        app:layout_constraintTop_toBottomOf="@+id/etAccount"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:drawablePadding="@dimen/size_6dp"
        android:padding="@dimen/size_8dp"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:maxLength="@integer/password_max_length"
        android:singleLine="true"
        android:hint="@string/hint_password"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        android:drawableRight="@drawable/btn_clear_selector"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:textColor="@color/white"
        android:text="@string/register_l"
        android:textSize="@dimen/size_16sp"
        android:background="@drawable/btn_bg_selector"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_14dp"
        android:layout_marginRight="@dimen/size_14dp"
        android:layout_marginTop="@dimen/size_6dp"
        android:drawablePadding="@dimen/size_6dp"
        android:padding="@dimen/size_8dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_theme"
        android:text="@string/register_return"
        android:onClick="loginNowClicked"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>