<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/title_wx">

    <TextView
        android:id="@+id/ztTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_16dp"
        android:paddingRight="@dimen/size_16dp"
        android:paddingTop="@dimen/size_12dp"
        android:paddingBottom="@dimen/size_12dp"
        android:gravity="center"
        android:text="@string/hint_account_t"
        android:textColor="@color/text_3"
        android:textSize="40sp"
        android:drawablePadding="@dimen/size_6dp"
        android:layout_marginTop="@dimen/size_15dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 账号提示TextView -->
        <TextView
            android:id="@+id/ztQQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/size_16dp"
            android:paddingRight="@dimen/size_16dp"
            android:paddingTop="@dimen/size_12dp"
            android:paddingBottom="@dimen/size_12dp"
            android:gravity="center_vertical"
            android:text="@string/hint_account"
            android:textColor="@color/text_3"
            android:textSize="@dimen/size_26sp"
            android:drawablePadding="@dimen/size_6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/etUsername"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginTop="@dimen/size_15dp"/>

        <!-- 账号输入EditText -->
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:hint="请输入账号"
            android:maxLength="@integer/username_max_length"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:drawableRight="@drawable/btn_clear_selector"
            app:layout_constraintTop_toTopOf="@id/ztQQ"
            app:layout_constraintStart_toEndOf="@id/ztQQ"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ztQQ"/>

        <!-- 密码提示TextView -->
        <TextView
            android:id="@+id/ztPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/size_16dp"
            android:paddingRight="@dimen/size_16dp"
            android:paddingTop="@dimen/size_12dp"
            android:paddingBottom="@dimen/size_12dp"
            android:gravity="center_vertical"
            android:text="@string/hint_password"
            android:textColor="@color/text_3"
            android:textSize="@dimen/size_26sp"
            android:drawablePadding="@dimen/size_6dp"
            app:layout_constraintTop_toBottomOf="@id/etUsername"
            app:layout_constraintStart_toStartOf="@id/ztQQ"
            app:layout_constraintEnd_toStartOf="@id/etPassword"
            android:layout_marginTop="@dimen/size_15dp"/>

        <!-- 密码输入EditText -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:singleLine="true"
            android:hint="请输入密码"
            android:imeOptions="actionDone"
            android:drawableRight="@drawable/btn_clear_selector"
            app:layout_constraintTop_toTopOf="@id/ztPassword"
            app:layout_constraintStart_toEndOf="@id/ztPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ztPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="@dimen/size_24sp"
        android:background="@drawable/btn_bg_selector"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/tvForgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_14dp"
        android:layout_marginRight="@dimen/size_14dp"
        android:layout_marginTop="@dimen/size_6dp"
        android:drawablePadding="@dimen/size_6dp"
        android:padding="@dimen/size_8dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_theme"
        android:text="@string/forgot_password"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_14dp"
        android:layout_marginRight="@dimen/size_14dp"
        android:layout_marginTop="@dimen/size_6dp"
        android:drawablePadding="@dimen/size_6dp"
        android:padding="@dimen/size_8dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_theme"
        android:text="@string/register_now"
        android:onClick="registerNowClicked"
        android:layout_gravity="end"/>
</LinearLayout>
